2008-08-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlFreeState.cs: Replace C#3 automatic
	  properties into C# 2 properties. Fixes build on Mono < 1.9. Thanks
	  to Joshua Simmons for the patch.

2008-08-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Break up
	  attribute value states.
	* MonoDevelop.Xml.StateEngine/Parser.cs: Attach parser state to
	  exceptions.

2008-07-31  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs,
	  MonoDevelop.Xml.StateEngine/XmlAttributeState.cs: Use a
	  MalformedTagState for recovery.
	* MonoDevelop.Xml.StateEngine/XmlCommentState.cs,
	  MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs:
	  Insert nodes when state begins (instead of end) so that we can use
	  them in paths.
	* MonoDevelop.Xml.StateEngine/Parser.cs: Track previous state.
	* MonoDevelop.Xml.StateEngine/XDom.cs: Add support for getting a
	  "friendly" representation of the node for a user-visible path.

2008-07-30  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlClosingTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlCommentState.cs,
	  MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlTagState.cs,
	  MonoDevelop.Xml.StateEngine/XmlNameState.cs: Move towards making
	  the MalformedTagState more replaceable, so that handling of
	  unexpected '<' can be intercepted.
	* MonoDevelop.Xml.StateEngine/XmlCDataState.cs,
	  MonoDevelop.Xml.StateEngine/XmlProcessingInstructionState.cs:
	  Tidying up.

2008-07-30  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Xml.StateEngine/XmlMalformedTagState.cs,